sumo/tests/sumo/errors/network/edge/root__edge#id__ungiven1/errors.sumo
Error: Missing id of a 'edge'-object.
Error: Trying to add an unknown lane ('1_0') as continuation.
Error: An unknown lane ('1_0') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_0').
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
